--- a/index.html
+++ b/index.html
@@ -1,170 +1,225 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <title>Auth Token + YouTube Test</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pod Player – Token & YouTube Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #0b0c10;
-      color: #f5f5f5;
+    :root {
+      --bg-main: #050816;
+      --bg-card: radial-gradient(circle at top, #1f1f49 0, #050816 40%, #02030a 100%);
+      --border-soft: rgba(255, 255, 255, 0.08);
+      --accent: #ffb347;
+      --accent-strong: #ff6b3d;
+      --text-main: #f5f5f5;
+      --text-muted: #a8a8c0;
+      --input-bg: rgba(8, 11, 30, 0.85);
     }
 
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 16px;
-    }
-
-    h1 {
-      font-size: 20px;
-      margin-bottom: 12px;
-    }
-
-    .token-box {
-      background: #151823;
-      border-radius: 8px;
-      padding: 12px 14px;
-      margin-bottom: 16px;
-      border: 1px solid rgba(255,255,255,0.08);
-    }
-
-    .token-label {
-      font-size: 13px;
-      opacity: 0.8;
-      margin-bottom: 6px;
-    }
-
-    .token-value {
-      font-family: "Fira Code", monospace;
-      font-size: 12px;
-      word-break: break-all;
-      background: #0f1118;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid rgba(255,255,255,0.05);
-    }
-
-    .controls {
-      background: #151823;
-      border-radius: 8px;
-      padding: 12px 14px;
-      margin-bottom: 16px;
-      border: 1px solid rgba(255,255,255,0.08);
-    }
-
-    .controls label {
-      font-size: 13px;
-      display: block;
-      margin-bottom: 6px;
-    }
-
-    .controls input {
-      width: 100%;
-      padding: 8px 10px;
-      border-radius: 6px;
-      border: 1px solid rgba(255,255,255,0.12);
-      background: #0f1118;
-      color: #f5f5f5;
-      font-size: 13px;
+    * {
       box-sizing: border-box;
     }
 
-    .btn-row {
-      margin-top: 10px;
+    body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: var(--bg-main);
+      color: var(--text-main);
       display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+    }
+
+    .shell {
+      width: 100%;
+      max-width: 800px;
+      border-radius: 20px;
+      background: var(--bg-card);
+      box-shadow:
+        0 22px 50px rgba(0, 0, 0, 0.7),
+        0 0 0 1px rgba(255, 255, 255, 0.04);
+      padding: 20px 20px 16px;
+    }
+
+    .header-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       gap: 8px;
+      margin-bottom: 14px;
+    }
+
+    .title {
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+    }
+
+    .badge {
+      font-size: 11px;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 255, 255, 0.16);
+      color: var(--text-muted);
+    }
+
+    .section-label {
+      font-size: 12px;
+      color: var(--text-muted);
+      margin-bottom: 6px;
+    }
+
+    .token-box {
+      width: 100%;
+      min-height: 54px;
+      border-radius: 14px;
+      background: rgba(3, 7, 30, 0.9);
+      border: 1px solid var(--border-soft);
+      padding: 8px 10px;
+      font-size: 12px;
+      color: var(--text-main);
+      line-height: 1.5;
+      overflow-wrap: break-word;
+    }
+
+    .input-row {
+      display: flex;
       flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 16px;
+      margin-bottom: 12px;
     }
 
-    button {
-      border: none;
-      border-radius: 6px;
-      padding: 8px 12px;
+    .input-row input {
+      flex: 1 1 260px;
+      min-width: 0;
+      border-radius: 999px;
+      border: 1px solid var(--border-soft);
+      background: var(--input-bg);
+      padding: 9px 12px;
       font-size: 13px;
+      color: var(--text-main);
+      outline: none;
+    }
+
+    .input-row input::placeholder {
+      color: rgba(168, 168, 192, 0.7);
+    }
+
+    .btn {
+      border-radius: 999px;
+      border: none;
+      outline: none;
+      font-size: 12px;
+      padding: 9px 14px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
       cursor: pointer;
-      background: #2f80ed;
-      color: #fff;
-      font-weight: 500;
+      white-space: nowrap;
     }
 
-    button.secondary {
-      background: #4b5563;
+    .btn-primary {
+      background: linear-gradient(135deg, var(--accent), var(--accent-strong));
+      color: #050816;
+      box-shadow: 0 8px 20px rgba(255, 107, 61, 0.45);
+      font-weight: 600;
     }
 
-    button:active {
-      opacity: 0.8;
+    .btn-secondary {
+      background: transparent;
+      color: var(--text-main);
+      border: 1px solid var(--border-soft);
     }
 
-    .iframe-wrapper {
-      margin-top: 8px;
-      border-radius: 8px;
+    .iframe-shell {
+      margin-top: 12px;
+      border-radius: 14px;
       overflow: hidden;
-      border: 1px solid rgba(255,255,255,0.12);
+      border: 1px solid rgba(255, 255, 255, 0.05);
       background: #000;
-      /* 16:9 */
-      position: relative;
-      padding-top: 56.25%;
+      height: 220px;
     }
 
-    .iframe-wrapper iframe {
-      position: absolute;
-      inset: 0;
+    .iframe-shell iframe {
       width: 100%;
       height: 100%;
-      border: 0;
+      border: none;
     }
 
-    .small-note {
-      font-size: 11px;
-      opacity: 0.7;
-      margin-top: 4px;
+    @media (max-width: 560px) {
+      .shell {
+        padding: 14px 12px;
+      }
+
+      .title {
+        font-size: 16px;
+      }
+
+      .iframe-shell {
+        height: 180px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Token + YouTube Test Page</h1>
-
-    <!-- عرض التوكين القادم من Flutter (localStorage.authToken) -->
-    <div class="token-box">
-      <div class="token-label">Auth token from <code>localStorage.authToken</code>:</div>
-      <div id="tokenValue" class="token-value">Loading token…</div>
+  <div class="shell">
+    <div class="header-row">
+      <div class="title">Pod Player – Token & YouTube Tester</div>
+      <div class="badge">Debug Panel</div>
     </div>
 
-    <!-- إدخال لينك يوتيوب -->
-    <div class="controls">
-      <label for="ytUrl">YouTube URL to test:</label>
+    <!-- عرض التوكن -->
+    <div class="section-label">authToken from localStorage</div>
+    <div id="tokenBox" class="token-box">
+      Loading token...
+    </div>
+
+    <!-- إدخال لينك يوتيوب + الأزرار -->
+    <div class="input-row">
       <input
         id="ytUrl"
         type="text"
-        value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-        placeholder="https://www.youtube.com/watch?v=VIDEO_ID"
+        placeholder="Paste a YouTube URL here..."
       />
 
-      <div class="btn-row">
-        <!-- فتح الفيديو في نفس الصفحة (WebView هيتحوّل مباشرة ليوتيوب) -->
-        <button id="openSameTab">Open video in this tab</button>
+      <button id="openSameTab" class="btn btn-primary">
+        Open Video in Same Tab
+      </button>
 
-     
+      <button id="openInIframe" class="btn btn-secondary">
+        Open in Iframe
+      </button>
+    </div>
+
+    <div class="section-label">Inline preview (iframe)</div>
+    <div class="iframe-shell">
+      <iframe
+        id="ytFrame"
+        src=""
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </div>
 
   <script>
     (function () {
-      // قراءة التوكين من localStorage وعرضه
+      // عرض التوكن الموجود في localStorage
       function showToken() {
-        var box = document.getElementById("tokenValue");
-        var tokenText = "";
+        var box = document.getElementById("tokenBox");
+        if (!box) return;
 
+        var tokenText = "";
         try {
-          var token = window.localStorage.getItem("authToken");
-          if (!token) {
-            tokenText = "NO TOKEN FOUND in localStorage.authToken";
+          var token = localStorage.getItem("authToken");
+          if (token) {
+            tokenText = "authToken: " + token;
           } else {
-            tokenText = token;
+            tokenText = "No authToken found in localStorage.";
           }
         } catch (e) {
           tokenText = "Error reading localStorage: " + e;
@@ -207,13 +262,110 @@
         var openInIframeBtn = document.getElementById("openInIframe");
         var frame = document.getElementById("ytFrame");
 
+        // متغير جلوبال نخزن فيه لينك الفيديو
+        window._pendingVideoUrl = null;
+
+        // زر: Open Video → يودّي أولاً لصفحة وسيطة فيها زر تأكيد
         openSameTabBtn.addEventListener("click", function () {
           var url = ytInput.value.trim();
           if (!url) return;
-          // هينقل نفس الـ WebView ليوتيوب مباشرة
-          window.location.href = url;
+
+          window._pendingVideoUrl = url;
+
+          // نرسم "صفحة" جديدة بسيطة فيها زر تأكيد
+          document.body.innerHTML = `
+          <div style="
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #050816;
+            color: #f5f5f5;
+          ">
+            <div style="
+              max-width: 420px;
+              width: 90%;
+              padding: 24px 20px;
+              border-radius: 16px;
+              background: radial-gradient(circle at top, #1f1f49 0, #050816 40%, #02030a 100%);
+              box-shadow:
+                0 18px 45px rgba(0,0,0,0.7),
+                0 0 0 1px rgba(255,255,255,0.04);
+              text-align: center;
+            ">
+              <h2 style="margin: 0 0 12px; font-size: 20px; font-weight: 600;">
+                تأكيد فتح الفيديو
+              </h2>
+              <p style="margin: 0 0 20px; font-size: 13px; line-height: 1.6; color: #c9c9d4;">
+                سيتم فتح فيديو يوتيوب في نفس الشاشة.<br>
+                اضغط على الزر بالأسفل للمتابعة.
+              </p>
+
+              <button
+                id="confirmOpenVideo"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  justify-content: center;
+                  gap: 8px;
+                  padding: 10px 20px;
+                  border-radius: 999px;
+                  border: none;
+                  outline: none;
+                  background: linear-gradient(135deg, #ffb347, #ff6b3d);
+                  color: #050816;
+                  font-size: 14px;
+                  font-weight: 600;
+                  cursor: pointer;
+                  box-shadow: 0 8px 20px rgba(255,107,61,0.45);
+                "
+              >
+                فتح الفيديو الآن
+                <span style="font-size: 16px;">▶</span>
+              </button>
+
+              <button
+                id="cancelBack"
+                style="
+                  margin-top: 10px;
+                  display: block;
+                  width: 100%;
+                  padding: 8px 16px;
+                  border-radius: 999px;
+                  border: 1px solid rgba(255,255,255,0.18);
+                  background: transparent;
+                  color: #c9c9d4;
+                  font-size: 12px;
+                  cursor: pointer;
+                "
+              >
+                رجوع للصفحة السابقة
+              </button>
+            </div>
+          </div>
+        `;
+
+          // زر تأكيد فتح الفيديو
+          document
+            .getElementById("confirmOpenVideo")
+            .addEventListener("click", function () {
+              if (window._pendingVideoUrl) {
+                window.location.href = window._pendingVideoUrl;
+              }
+            });
+
+          // زر رجوع للصفحة الأصلية (إعادة تحميل)
+          document
+            .getElementById("cancelBack")
+            .addEventListener("click", function () {
+              window.location.reload();
+            });
         });
 
+        // زر فتح داخل iframe يظل كما هو
         openInIframeBtn.addEventListener("click", function () {
           var url = ytInput.value.trim();
           if (!url) return;
@@ -225,3 +377,4 @@
   </script>
 </body>
 </html>
+
