--- a/test2.html
+++ b/test2.html
@@ -2,10 +2,17 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; URL='index.html'" />
-  <title>Redirecting...</title>
+  <title>فتح الصفحة الأساسية</title>
 </head>
 <body style="background:#111; color:#fff; font-family:sans-serif; padding:40px;">
-  <h2>جاري فتح الصفحة الأساسية...</h2>
+
+  <h1>هذه صفحة test2.html</h1>
+  <p>اضغط لفتح الصفحة الأساسية:</p>
+
+  <button onclick="window.location.href='index.html'"
+    style="padding:12px 22px; border-radius:10px; font-size:16px; cursor:pointer;">
+    افتح الصفحة الأولى
+  </button>
+
 </body>
 </html>
