--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <script>
     (function () {
-      const YOUTUBE_URL = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+      const YOUTUBE_URL = "https://www.youtube.com/watch?v=xdTwodPnRzE";
 
       function extractVideoId(url) {
         try {
